# rusty-crawler

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: crawler.rs  main.rs
