[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
